# BotLattice

./: .gitignore  .gitingore  DEPLOYMENT.md  LICENSE  README.md  docker-compose.yml  main.py  openapi.json  pyproject.toml
api/: routes_ingest.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/api/: routes_ingest.py  routes_query.py  websocket_chat.py
backend/pipeline/config/: vector_store.py
backend/pipeline/ingestion/: chunking.py  pipeline.py
backend/pipeline/query/: prompt.py  query_engine.py
backend/src/api/: routes_auth.py  routes_chunking.py  routes_embeddings.py  routes_ingest.py  routes_query.py  routes_settings.py  routes_vectordb.py  websocket_chat.py
backend/src/database/: __init__.py  crud.py  db.py  models.py  option_catalog.py  schema.py
backend/src/logger/: logging.py
backend/src/multi_agent/: config.py  graph.py  state.py  synthesizer.py
backend/src/multi_agent/agents/: confirm_intent.py  context_builder.py  decision_controller.py  evaluator.py  intent_analyzer.py  orchestrator.py  prompt_refiner.py  prompt_writer.py
backend/src/multi_agent/utils/: base_agent.py  logging.py  prompt.py  schema.py
backend/src/pipeline/config/: chunking_config.py  chunking_state.py  collection_state.py  dimension_extractor.py  embedding_config.py  embedding_factory.py  embedding_runtime.py  enums.py  llm_settings_state.py  schemas.py  settings.py  vector_store.py  vectordb_config.py  vectordb_state.py
backend/src/pipeline/ingestion/: chunking.py  pipeline.py
backend/temp/: test2.txt  test_replace.txt
(+59 files in other folders)
