[project]
name = "rag-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "fastembed>=0.7.4",
    "ipython>=9.12.0",
    "langchain>=1.2.13",
    "langchain-google-vertexai>=3.2.2",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "llama-index>=0.14.16",
    "llama-index-embeddings-fastembed>=0.5.0",
    "llama-index-llms-google-genai>=0.8.7",
    "llama-index-vector-stores-qdrant>=0.9.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.0",
    "uvicorn>=0.41.0",
]
